--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/404.html", "status": 404 }
+    "routes": [
+      { "handle": "filesystem" },
+      { "src": "/.*", "status": 404, "dest": "/404.html" }
     ]
   }
   
