--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "routes": [
       { "handle": "filesystem" },
-      { "src": "/.*", "status": 404, "dest": "/404.html" }
+      { "src": "/.*", "status": 404, "dest": "/src/pages/404.html" }
     ]
   }
   
